SNC-4972 : Fixed error on scaling image.

--- a/src/MEGASync/gui/ui/SettingsDialog.ui
+++ b/src/MEGASync/gui/ui/SettingsDialog.ui
@@ -102,7 +102,7 @@ background-color: #fff63d6b; /*colorToken.indicator-pink*/
 
 #iconDisabledSyncs
 {
-border-image: url(:/images/themed/light/error_sync_icon.svg); /*replaceThemeToken*/
+image: url(:/images/themed/light/error_sync_icon.svg); /*replaceThemeToken*/
 }
 
 #lDisabledSyncs
