--- a/src/MEGASync/gui/ui/SettingsDialog.ui
+++ b/src/MEGASync/gui/ui/SettingsDialog.ui
@@ -55,6 +55,11 @@
 
 /*ColorTokenIcon;Button;bHelp;normal;off;colorToken.link-primary*/
 
+#pSecurity QGroupBox
+{
+margin-top: 0px;
+}
+
 #uploadGroup, #downloadGroup
 {
 border-radius: 8px;
@@ -709,13 +714,13 @@ margin-bottom: 3px;
       </property>
       <layout class="QVBoxLayout" name="pGeneralLayout" stretch="0,0,0,0,10">
        <property name="spacing">
-        <number>15</number>
+        <number>24</number>
        </property>
        <property name="leftMargin">
         <number>0</number>
        </property>
        <property name="topMargin">
-        <number>0</number>
+        <number>10</number>
        </property>
        <property name="rightMargin">
         <number>0</number>
@@ -735,6 +740,9 @@ margin-bottom: 3px;
           <string notr="true">mega</string>
          </property>
          <layout class="QHBoxLayout" name="horizontalLayout_11" stretch="1,0,1">
+          <property name="spacing">
+           <number>0</number>
+          </property>
           <property name="leftMargin">
            <number>12</number>
           </property>
@@ -757,6 +765,12 @@ margin-bottom: 3px;
               <property name="enabled">
                <bool>true</bool>
               </property>
+              <property name="maximumSize">
+               <size>
+                <width>16777215</width>
+                <height>16</height>
+               </size>
+              </property>
               <property name="cursor">
                <cursorShape>PointingHandCursor</cursorShape>
               </property>
@@ -770,6 +784,12 @@ margin-bottom: 3px;
             </item>
             <item>
              <widget class="QCheckBox" name="cFinderIcons">
+              <property name="maximumSize">
+               <size>
+                <width>16777215</width>
+                <height>16</height>
+               </size>
+              </property>
               <property name="cursor">
                <cursorShape>PointingHandCursor</cursorShape>
               </property>
@@ -783,6 +803,12 @@ margin-bottom: 3px;
             </item>
             <item>
              <widget class="QCheckBox" name="cOverlayIcons">
+              <property name="maximumSize">
+               <size>
+                <width>16777215</width>
+                <height>16</height>
+               </size>
+              </property>
               <property name="cursor">
                <cursorShape>PointingHandCursor</cursorShape>
               </property>
@@ -798,6 +824,12 @@ margin-bottom: 3px;
              <widget class="QCheckBox" name="cAutoUpdate">
               <property name="enabled">
                <bool>true</bool>
+              </property>
+              <property name="maximumSize">
+               <size>
+                <width>16777215</width>
+                <height>16</height>
+               </size>
               </property>
               <property name="cursor">
                <cursorShape>PointingHandCursor</cursorShape>
@@ -830,6 +862,9 @@ margin-bottom: 3px;
           </item>
           <item>
            <layout class="QVBoxLayout" name="verticalLayout_7">
+            <property name="spacing">
+             <number>0</number>
+            </property>
             <item>
              <spacer name="verticalSpacer_2">
               <property name="orientation">
@@ -838,7 +873,7 @@ margin-bottom: 3px;
               <property name="sizeHint" stdset="0">
                <size>
                 <width>20</width>
-                <height>40</height>
+                <height>0</height>
                </size>
               </property>
              </spacer>
@@ -852,7 +887,7 @@ margin-bottom: 3px;
                 </property>
                 <property name="sizeHint" stdset="0">
                  <size>
-                  <width>40</width>
+                  <width>0</width>
                   <height>20</height>
                  </size>
                 </property>
@@ -1227,7 +1262,7 @@ margin-bottom: 3px;
         <number>0</number>
        </property>
        <property name="bottomMargin">
-        <number>10</number>
+        <number>0</number>
        </property>
        <item>
         <widget class="QGroupBox" name="gAccountDetails">
@@ -1611,7 +1646,7 @@ margin-bottom: 3px;
      <widget class="QWidget" name="pSyncs">
       <layout class="QVBoxLayout" name="verticalLayout_8" stretch="0">
        <property name="spacing">
-        <number>0</number>
+        <number>24</number>
        </property>
        <property name="leftMargin">
         <number>0</number>
@@ -1632,6 +1667,9 @@ margin-bottom: 3px;
      </widget>
      <widget class="QWidget" name="pBackup">
       <layout class="QVBoxLayout" name="verticalLayout_19">
+       <property name="spacing">
+        <number>24</number>
+       </property>
        <property name="leftMargin">
         <number>0</number>
        </property>
@@ -1676,38 +1714,58 @@ margin-bottom: 3px;
          </property>
          <layout class="QHBoxLayout" name="gRecoveryKeyLayout">
           <property name="spacing">
-           <number>32</number>
+           <number>12</number>
           </property>
           <property name="leftMargin">
-           <number>32</number>
+           <number>12</number>
           </property>
           <property name="topMargin">
-           <number>10</number>
+           <number>12</number>
           </property>
           <property name="rightMargin">
-           <number>10</number>
+           <number>12</number>
           </property>
           <property name="bottomMargin">
-           <number>10</number>
+           <number>12</number>
           </property>
           <item>
-           <widget class="QLabel" name="lRecoveryKeyPic">
-            <property name="sizePolicy">
-             <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
+           <layout class="QVBoxLayout" name="verticalLayout_15">
+            <property name="spacing">
+             <number>0</number>
             </property>
-            <property name="minimumSize">
-             <size>
-              <width>72</width>
-              <height>72</height>
-             </size>
-            </property>
-            <property name="styleSheet">
-             <string notr="true"/>
-            </property>
-           </widget>
+            <item>
+             <widget class="QLabel" name="lRecoveryKeyPic">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="minimumSize">
+               <size>
+                <width>72</width>
+                <height>72</height>
+               </size>
+              </property>
+              <property name="styleSheet">
+               <string notr="true"/>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <spacer name="verticalSpacer_10">
+              <property name="orientation">
+               <enum>Qt::Vertical</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>20</width>
+                <height>0</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+           </layout>
           </item>
           <item>
            <layout class="QVBoxLayout" name="gRecoveryKeyRightLayout">
@@ -1737,6 +1795,9 @@ margin-bottom: 3px;
               </property>
               <property name="wordWrap">
                <bool>true</bool>
+              </property>
+              <property name="type" stdset="0">
+               <string notr="true">secondary</string>
               </property>
              </widget>
             </item>
@@ -1801,38 +1862,58 @@ margin-bottom: 3px;
          </property>
          <layout class="QHBoxLayout" name="horizontalLayout_5">
           <property name="spacing">
-           <number>32</number>
+           <number>12</number>
           </property>
           <property name="leftMargin">
-           <number>32</number>
+           <number>12</number>
           </property>
           <property name="topMargin">
-           <number>10</number>
+           <number>12</number>
           </property>
           <property name="rightMargin">
-           <number>10</number>
+           <number>12</number>
           </property>
           <property name="bottomMargin">
-           <number>10</number>
+           <number>12</number>
           </property>
           <item>
-           <widget class="QLabel" name="lChangePasswordPic">
-            <property name="sizePolicy">
-             <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
+           <layout class="QVBoxLayout" name="verticalLayout_18">
+            <property name="spacing">
+             <number>0</number>
             </property>
-            <property name="minimumSize">
-             <size>
-              <width>72</width>
-              <height>72</height>
-             </size>
-            </property>
-            <property name="styleSheet">
-             <string notr="true"/>
-            </property>
-           </widget>
+            <item>
+             <widget class="QLabel" name="lChangePasswordPic">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="minimumSize">
+               <size>
+                <width>72</width>
+                <height>72</height>
+               </size>
+              </property>
+              <property name="styleSheet">
+               <string notr="true"/>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <spacer name="verticalSpacer_11">
+              <property name="orientation">
+               <enum>Qt::Vertical</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>20</width>
+                <height>0</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+           </layout>
           </item>
           <item>
            <layout class="QVBoxLayout" name="gChangePasswordRightLayout">
@@ -1862,6 +1943,9 @@ margin-bottom: 3px;
               </property>
               <property name="wordWrap">
                <bool>true</bool>
+              </property>
+              <property name="type" stdset="0">
+               <string notr="true">secondary</string>
               </property>
              </widget>
             </item>
@@ -1925,12 +2009,18 @@ margin-bottom: 3px;
      <widget class="QWidget" name="pFolders">
       <layout class="QVBoxLayout" name="verticalLayout_6" stretch="0,0,0,0,1">
        <property name="spacing">
-        <number>20</number>
+        <number>24</number>
        </property>
        <property name="leftMargin">
         <number>0</number>
        </property>
+       <property name="topMargin">
+        <number>10</number>
+       </property>
        <property name="rightMargin">
+        <number>0</number>
+       </property>
+       <property name="bottomMargin">
         <number>0</number>
        </property>
        <item>
@@ -2717,35 +2807,52 @@ margin-top: 0px;
            </spacer>
           </item>
           <item>
-           <widget class="QPushButton" name="bOpenBandwidthSettings">
-            <property name="minimumSize">
-             <size>
-              <width>0</width>
-              <height>26</height>
-             </size>
-            </property>
-            <property name="maximumSize">
-             <size>
-              <width>16777215</width>
-              <height>26</height>
-             </size>
-            </property>
-            <property name="cursor">
-             <cursorShape>PointingHandCursor</cursorShape>
-            </property>
-            <property name="text">
-             <string>Change Settings…</string>
-            </property>
-            <property name="autoDefault">
-             <bool>false</bool>
-            </property>
-            <property name="type" stdset="0">
-             <string notr="true">secondary</string>
-            </property>
-            <property name="dimension" stdset="0">
-             <string notr="true">small</string>
-            </property>
-           </widget>
+           <layout class="QVBoxLayout" name="verticalLayout_22">
+            <item>
+             <spacer name="verticalSpacer_12">
+              <property name="orientation">
+               <enum>Qt::Vertical</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>20</width>
+                <height>0</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+            <item>
+             <widget class="QPushButton" name="bOpenBandwidthSettings">
+              <property name="minimumSize">
+               <size>
+                <width>0</width>
+                <height>26</height>
+               </size>
+              </property>
+              <property name="maximumSize">
+               <size>
+                <width>16777215</width>
+                <height>26</height>
+               </size>
+              </property>
+              <property name="cursor">
+               <cursorShape>PointingHandCursor</cursorShape>
+              </property>
+              <property name="text">
+               <string>Change Settings…</string>
+              </property>
+              <property name="autoDefault">
+               <bool>false</bool>
+              </property>
+              <property name="type" stdset="0">
+               <string notr="true">secondary</string>
+              </property>
+              <property name="dimension" stdset="0">
+               <string notr="true">small</string>
+              </property>
+             </widget>
+            </item>
+           </layout>
           </item>
          </layout>
         </widget>
