--- a/src/MEGASync/gui/ui/SettingsDialog.ui
+++ b/src/MEGASync/gui/ui/SettingsDialog.ui
@@ -768,7 +768,7 @@ margin-bottom: 3px;
               <property name="maximumSize">
                <size>
                 <width>16777215</width>
-                <height>16</height>
+                <height>16777215</height>
                </size>
               </property>
               <property name="cursor">
@@ -787,7 +787,7 @@ margin-bottom: 3px;
               <property name="maximumSize">
                <size>
                 <width>16777215</width>
-                <height>16</height>
+                <height>16777215</height>
                </size>
               </property>
               <property name="cursor">
@@ -806,7 +806,7 @@ margin-bottom: 3px;
               <property name="maximumSize">
                <size>
                 <width>16777215</width>
-                <height>16</height>
+                <height>16777215</height>
                </size>
               </property>
               <property name="cursor">
@@ -828,7 +828,7 @@ margin-bottom: 3px;
               <property name="maximumSize">
                <size>
                 <width>16777215</width>
-                <height>16</height>
+                <height>16777215</height>
                </size>
               </property>
               <property name="cursor">
