--- a/src/MEGASync/gui/Resources.qrc
+++ b/src/MEGASync/gui/Resources.qrc
@@ -21,6 +21,10 @@
         <file>images/themed/light/switch_off.svg</file>
         <file>images/themed/light/radio_unchecked.svg</file>
         <file>images/themed/light/radio_checked.svg</file>
+        <file>images/themed/light/chevron-up_default.svg</file>
+        <file>images/themed/light/chevron-up_disabled.svg</file>
+        <file>images/themed/light/chevron-up_hover.svg</file>
+        <file>images/themed/light/chevron-up_press.svg</file>
         <file>images/themed/dark/switch_on_pressed.svg</file>
         <file>images/themed/dark/switch_on_hover.svg</file>
         <file>images/themed/dark/switch_on.svg</file>
