--- a/src/MEGASync/gui/ui/ProxySettings.ui
+++ b/src/MEGASync/gui/ui/ProxySettings.ui
@@ -3,14 +3,14 @@
  <class>ProxySettings</class>
  <widget class="QDialog" name="ProxySettings">
   <property name="windowModality">
-   <enum>Qt::WindowModality::WindowModal</enum>
+   <enum>Qt::WindowModal</enum>
   </property>
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>480</width>
-    <height>440</height>
+    <width>428</width>
+    <height>403</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -21,14 +21,14 @@
   </property>
   <property name="minimumSize">
    <size>
-    <width>480</width>
-    <height>440</height>
+    <width>0</width>
+    <height>0</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>480</width>
-    <height>440</height>
+    <width>16777215</width>
+    <height>16777215</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -39,7 +39,7 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <property name="spacing">
-    <number>10</number>
+    <number>24</number>
    </property>
    <property name="leftMargin">
     <number>20</number>
@@ -51,7 +51,7 @@
     <number>20</number>
    </property>
    <property name="bottomMargin">
-    <number>20</number>
+    <number>10</number>
    </property>
    <item>
     <widget class="QGroupBox" name="gProxy">
@@ -75,16 +75,16 @@
        <enum>QLayout::SetDefaultConstraint</enum>
       </property>
       <property name="leftMargin">
-       <number>10</number>
+       <number>12</number>
       </property>
       <property name="topMargin">
-       <number>20</number>
+       <number>12</number>
       </property>
       <property name="rightMargin">
-       <number>10</number>
+       <number>12</number>
       </property>
       <property name="bottomMargin">
-       <number>20</number>
+       <number>12</number>
       </property>
       <property name="horizontalSpacing">
        <number>6</number>
@@ -392,11 +392,11 @@
         <item>
          <spacer name="horizontalSpacer_2">
           <property name="orientation">
-           <enum>Qt::Orientation::Horizontal</enum>
+           <enum>Qt::Horizontal</enum>
           </property>
           <property name="sizeHint" stdset="0">
            <size>
-            <width>40</width>
+            <width>0</width>
             <height>20</height>
            </size>
           </property>
