--- a/src/MEGASync/gui/ui/SettingsDialog.ui
+++ b/src/MEGASync/gui/ui/SettingsDialog.ui
@@ -2053,6 +2053,21 @@ margin-top: 0px;
           <string notr="true">mega</string>
          </property>
          <layout class="QVBoxLayout" name="verticalLayout_11" stretch="0,0,1,0,0">
+          <property name="spacing">
+           <number>6</number>
+          </property>
+          <property name="leftMargin">
+           <number>12</number>
+          </property>
+          <property name="topMargin">
+           <number>12</number>
+          </property>
+          <property name="rightMargin">
+           <number>12</number>
+          </property>
+          <property name="bottomMargin">
+           <number>12</number>
+          </property>
           <item>
            <widget class="QLabel" name="lUploadFolder">
             <property name="focusPolicy">
@@ -2334,6 +2349,21 @@ margin-top: 0px;
           <string notr="true">mega</string>
          </property>
          <layout class="QHBoxLayout" name="horizontalLayout_9">
+          <property name="spacing">
+           <number>6</number>
+          </property>
+          <property name="leftMargin">
+           <number>12</number>
+          </property>
+          <property name="topMargin">
+           <number>12</number>
+          </property>
+          <property name="rightMargin">
+           <number>12</number>
+          </property>
+          <property name="bottomMargin">
+           <number>12</number>
+          </property>
           <item>
            <widget class="QLabel" name="lCacheSizeStatic">
             <property name="text">
@@ -2504,16 +2534,16 @@ margin-top: 0px;
          </property>
          <layout class="QHBoxLayout" name="horizontalLayout_21">
           <property name="leftMargin">
-           <number>10</number>
+           <number>12</number>
           </property>
           <property name="topMargin">
-           <number>10</number>
+           <number>12</number>
           </property>
           <property name="rightMargin">
-           <number>10</number>
+           <number>12</number>
           </property>
           <property name="bottomMargin">
-           <number>10</number>
+           <number>12</number>
           </property>
           <item>
            <widget class="QLabel" name="lRemoteCacheSizeStatic">
