--- a/src/MEGASync/gui/ui/SettingsDialog.ui
+++ b/src/MEGASync/gui/ui/SettingsDialog.ui
@@ -55,6 +55,9 @@
 
 /*ColorTokenIcon;Button;bHelp;normal;off;colorToken.link-primary*/
 
+/*ColorTokenIcon;Button;bAdd;normal;off;colorToken.text-inverse-accent*/
+/*ColorTokenIcon;Button;bDelete;normal;off;colorToken.button-outline*/
+
 #pSecurity QGroupBox
 {
 margin-top: 0px;
