SNC-5052 : Fix background color error on button box

--- a/src/MEGASync/gui/linux/NodeNameSetterDialog.ui
+++ b/src/MEGASync/gui/linux/NodeNameSetterDialog.ui
@@ -78,6 +78,9 @@ font-size: 13px;
    </item>
    <item>
     <widget class="QDialogButtonBox" name="buttonBox">
+     <property name="styleSheet">
+      <string notr="true">background: rgb(246, 245, 244);</string>
+     </property>
      <property name="standardButtons">
       <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
      </property>
