Create banner widget and integrate in Transfer Manager.
Conflicts:
	src/MEGASync/gui/gui.cmake
	src/MEGASync/transfers/gui/win/TransferManager.ui
	src/MEGASync/transfers/transfers.cmake

--- a/src/MEGASync/gui/Resources_win.qrc
+++ b/src/MEGASync/gui/Resources_win.qrc
@@ -1507,5 +1507,8 @@
         <file>images/StalledIssues/x-circle-solid@2x.png</file>
         <file>images/StalledIssues/x-circle-solid@3x.png</file>
         <file>images/star-spark.svg</file>
+        <file>images/banner/warning.svg</file>
+        <file>images/banner/error.svg</file>
+        <file>images/banner/info.svg</file>
     </qresource>
 </RCC>
