--- a/src/MEGASync/transfers/gui/win/TransferManager.ui
+++ b/src/MEGASync/transfers/gui/win/TransferManager.ui
@@ -259,7 +259,7 @@ QGroupBox::title
   qProperty-iconSize: 24px;
 }
 
-#lPaused, #lNbResults
+#lNbResults
 {
   color: #FF9E4F;
   font-size: 12px;
@@ -273,29 +273,6 @@ QGroupBox::title
   font-size: 12px;
   font-weight: bold;
   padding-left: 14px;
-}
-
-#lTransferOverQuota
-{
-   color: #F46265;
-  font-size: 12px;
-  font-weight: bold;
-  padding-left: 2px;
-}
-
-#lTransferOverQuotaMoreAbout
-{
-  color: #333333;
-  font-size: 12px;
-  font-weight: 400;
-  padding-left: 2px;
-}
-
-#lTransferOverQuotaInfo
-{
-   color: #777777;
-  font-size: 12px;
-  padding-left: 2px;
 }
 
 #sTransfers QToolButton
@@ -345,31 +322,6 @@ QGroupBox::title
     color: #333333;
     font-size: 24px;
     font-weight: 400;
-}
-
-/* 
-* Storage OQ text
-*/
-
-#lStorageOverQuota
-{
-	font-size: 10px;
-	font-weight: 600;
-	margin-left: 16px;
-	border-radius: 4px;
-	padding: 4px 8px;
-}
-
-#lStorageOverQuota[state=&quot;almostfull&quot;]
-{
-	background-color: #FEF4C6; /*colorToken.notification-warning*/
-	color: #B55407; /*colorToken.text-warning*/
-}
-
-#lStorageOverQuota[state=&quot;full&quot;]
-{
-	background-color: #FFE4E8; /*colorToken.notification-error*/
-	color: #E31B57; /*colorToken.text-error*/
 }
 
 /* 
@@ -1916,7 +1868,7 @@ QGroupBox::title
             </size>
            </property>
            <property name="currentIndex">
-            <number>0</number>
+            <number>1</number>
            </property>
            <widget class="QWidget" name="pSearchHeader">
             <property name="sizePolicy">
@@ -2240,6 +2192,12 @@ QGroupBox::title
          </item>
          <item row="1" column="0" colspan="3" alignment="Qt::AlignTop">
           <widget class="AutoResizeStackedWidget" name="sCurrentContentInfo">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
            <property name="minimumSize">
             <size>
              <width>0</width>
@@ -2255,7 +2213,25 @@ QGroupBox::title
            <property name="currentIndex">
             <number>0</number>
            </property>
-           <widget class="QWidget" name="pStatusHeaderInfo">
+           <widget class="TransferManagerStatusHeaderWidget" name="pStatusHeaderInfo">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Fixed" vsizetype="Minimum">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="minimumSize">
+             <size>
+              <width>925</width>
+              <height>0</height>
+             </size>
+            </property>
+            <property name="maximumSize">
+             <size>
+              <width>925</width>
+              <height>16777215</height>
+             </size>
+            </property>
             <layout class="QVBoxLayout" name="verticalLayout_3">
              <property name="spacing">
               <number>0</number>
@@ -2264,7 +2240,7 @@ QGroupBox::title
               <enum>QLayout::SetMinimumSize</enum>
              </property>
              <property name="leftMargin">
-              <number>8</number>
+              <number>0</number>
              </property>
              <property name="topMargin">
               <number>0</number>
@@ -2273,96 +2249,8 @@ QGroupBox::title
               <number>0</number>
              </property>
              <property name="bottomMargin">
-              <number>5</number>
+              <number>0</number>
              </property>
-             <item alignment="Qt::AlignLeft|Qt::AlignTop">
-              <widget class="QLabel" name="lPaused">
-               <property name="sizePolicy">
-                <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-                 <horstretch>0</horstretch>
-                 <verstretch>0</verstretch>
-                </sizepolicy>
-               </property>
-               <property name="text">
-                <string>All paused</string>
-               </property>
-              </widget>
-             </item>
-             <item alignment="Qt::AlignTop">
-              <widget class="QWidget" name="pTransferOverQuota" native="true">
-               <property name="sizePolicy">
-                <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-                 <horstretch>0</horstretch>
-                 <verstretch>0</verstretch>
-                </sizepolicy>
-               </property>
-               <property name="minimumSize">
-                <size>
-                 <width>0</width>
-                 <height>0</height>
-                </size>
-               </property>
-               <layout class="QVBoxLayout" name="verticalLayout_5">
-                <property name="spacing">
-                 <number>5</number>
-                </property>
-                <property name="leftMargin">
-                 <number>10</number>
-                </property>
-                <property name="topMargin">
-                 <number>0</number>
-                </property>
-                <property name="rightMargin">
-                 <number>0</number>
-                </property>
-                <property name="bottomMargin">
-                 <number>5</number>
-                </property>
-                <item alignment="Qt::AlignLeft">
-                 <widget class="QLabel" name="lTransferOverQuota">
-                  <property name="text">
-                   <string>Transfer quota exceeded</string>
-                  </property>
-                 </widget>
-                </item>
-                <item>
-                 <widget class="QLabel" name="lTransferOverQuotaInfo">
-                  <property name="text">
-                   <string/>
-                  </property>
-                 </widget>
-                </item>
-                <item>
-                 <widget class="QLabel" name="lTransferOverQuotaMoreAbout">
-                  <property name="font">
-                   <font>
-                    <family>Lato</family>
-                    <pointsize>-1</pointsize>
-                    <bold>false</bold>
-                    <underline>true</underline>
-                   </font>
-                  </property>
-                  <property name="openExternalLinks">
-                   <bool>true</bool>
-                  </property>
-                 </widget>
-                </item>
-               </layout>
-              </widget>
-             </item>
-             <item alignment="Qt::AlignLeft|Qt::AlignTop">
-              <widget class="QLabel" name="lStorageOverQuota">
-               <property name="sizePolicy">
-                <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
-                 <horstretch>0</horstretch>
-                 <verstretch>0</verstretch>
-                </sizepolicy>
-               </property>
-               <property name="text">
-                <string/>
-               </property>
-              </widget>
-             </item>
             </layout>
            </widget>
            <widget class="QWidget" name="pSearchHeaderInfo">
@@ -3046,6 +2934,12 @@ QGroupBox::title
    <class>MediaTypeFilterWidget</class>
    <extends>QWidget</extends>
    <header>MediaTypeFilterWidget.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>TransferManagerStatusHeaderWidget</class>
+   <extends>QWidget</extends>
+   <header>TransferManagerStatusHeaderWidget.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
