Incorrect UI name fix for Linux

--- a/src/MEGASync/transfers/gui/linux/TransferManagerDelegateWidget.ui
+++ b/src/MEGASync/transfers/gui/linux/TransferManagerDelegateWidget.ui
@@ -632,7 +632,7 @@ QProgressBar::chunk
         </widget>
        </item>
        <item>
-        <widget class="QWidget" name="cItemSpeed" native="true">
+        <widget class="QWidget" name="cSpeedItem" native="true">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
            <horstretch>0</horstretch>
