SNC-3266. "Loading" avatar

--- a/src/MEGASync/gui/Resources_macx.qrc
+++ b/src/MEGASync/gui/Resources_macx.qrc
@@ -1231,5 +1231,8 @@
         <file>images/banner/warning.svg</file>
         <file>images/banner/error.svg</file>
         <file>images/banner/info.svg</file>
+        <file>images/default-avatar.jpg</file>
+        <file>images/default-avatar@2x.jpg</file>
+        <file>images/default-avatar@3x.jpg</file>
     </qresource>
 </RCC>
