--- a/src/MEGASync/gui/Resources_linux.qrc
+++ b/src/MEGASync/gui/Resources_linux.qrc
@@ -1485,5 +1485,8 @@
         <file>images/banner/warning.svg</file>
         <file>images/banner/error.svg</file>
         <file>images/banner/info.svg</file>
+        <file>images/default-avatar.jpg</file>
+        <file>images/default-avatar@2x.jpg</file>
+        <file>images/default-avatar@3x.jpg</file>
     </qresource>
 </RCC>
