SNC-5059.Support wildcard exclusions in the exclusions window

--- a/src/MEGASync/gui/Resources_qml.qrc
+++ b/src/MEGASync/gui/Resources_qml.qrc
@@ -121,5 +121,6 @@
         <file>images/qml/multidevices@2x.png</file>
         <file>images/qml/multidevices@3x.png</file>
         <file>images/qml/power.svg</file>
+        <file>images/qml/sync_exclusions/folder-file.svg</file>
     </qresource>
 </RCC>
